--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,102 @@
-numpy
-fastapi
-firebase_admin
+anyio==3.6.1
+asgiref==3.5.2
+astroid==2.4.1
+autopep8==1.5.4
+beautifulsoup4==4.11.1
+black==21.12b0
+bs4==0.0.1
+CacheControl==0.12.11
+cachetools==5.2.0
+certifi==2022.5.18.1
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.0.3
+cmdstanpy==0.9.5
+colorama==0.4.3
+convertdate==2.4.0
+cryptography==37.0.4
+cycler==0.11.0
+Cython==0.29.32
+dukpy==0.2.3
+ephem==4.1.3
+fastapi==0.78.0
+fbprophet==0.7.1
+filelock==3.8.0
+firebase-admin==5.3.0
+fonttools==4.37.1
+google-api-core==2.10.0
+google-api-python-client==2.58.0
+google-auth==2.11.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.6.1
+google-cloud-storage==2.5.0
+google-crc32c==1.5.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.4
+grpcio==1.48.1
+grpcio-status==1.48.1
+h11==0.13.0
+hijri-converter==2.2.4
+holidays==0.15
+httplib2==0.20.4
+idna==3.3
+isort==4.3.21
+jwt==1.3.1
+kiwisolver==1.4.4
+korean-lunar-calendar==0.2.1
+lazy-object-proxy==1.4.3
+localpip==1.0.7
+LunarCalendar==0.0.9
+lxml==4.9.0
+matplotlib==3.5.3
+mccabe==0.6.1
+msgpack==1.0.4
+multitasking==0.0.10
+mypy-extensions==0.4.3
+numpy==1.19.1
+packaging==21.3
+pandas==1.4.2
+pathspec==0.9.0
+patsy==0.5.2
+Pillow==9.2.0
+platformdirs==2.4.0
+plotly==5.10.0
+proto-plus==1.22.1
+protobuf==4.21.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycparser==2.21
+pydantic==1.9.1
+PyJWT==2.4.0
+pylint==2.5.2
+PyMeeus==0.5.11
+PyPAC==0.16.0
+pyparsing==3.0.9
+pystan==2.17.1.0
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+pytz==2022.1
+requests==2.27.1
+requests-file==1.5.1
+rsa==4.9
+scipy==1.9.1
+setuptools-git==1.2
+six==1.15.0
+sniffio==1.2.0
+soupsieve==2.3.2.post1
+starlette==0.19.1
+statsmodels==0.11.1
+tenacity==8.0.1
+tldextract==3.3.1
+toml==0.10.1
+tomli==1.2.3
+tqdm==4.64.1
+typing_extensions==4.0.1
+union==0.1.10
+uritemplate==4.1.1
+urllib3==1.26.9
+uvicorn==0.17.6
+wrapt==1.12.1
+yfinance==0.1.70
